# pjlib

./: .cursorignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  SKILLS_CATALOG.md  TOOLING.md  hookmap.md  hooks.json.backup  pyproject.toml  settings.json  settings.local.json  tmp_dataset.jsonl.stats.json  todo.txt
.beads/: daemon-error
.ralph-tui/: config.toml  progress.md  session-meta.json  session.json
agents/: ai-interview-market-researcher.md  ai-interview-trend-analyst.md  context-aware-coder.md  golang-enterprise-expert.md  log-analyzer.md  maestro-companion-expert.md  mcp-best-practices-documenter.md  mcp-browser-workflow-creator.md  mcp-data-pipeline-creator.md  mcp-dynamic-discovery-specialist.md  memory-manager.md  migration-auditor.md  rust-async-reviewer.md  rust-optimization-scanner.md  rust-patterns-expert.md  rust-safety-auditor.md  rust-test-generator.md  triage-expert.md
backups/: .claude.json.backup.1772600326922  .claude.json.backup.1772600696227  .claude.json.backup.1772600761866  .claude.json.backup.1772600824415  .claude.json.backup.1772600892886
cache/: session-metadata.db
commands/: ai-review.md  analyze-codebase.md  code-to-task.md  prep-for-standup.md  quick-plan.md  research-task-breakdown.md  research-viability.md  research.md  standup-notes.md
conversation_explorer/: README.md  __init__.py  analytics.py  cli.py  explorer.py  formatter.py  main.py  models.py  parser.py
design/: 2026-03-04-doob-sync-implementation.md  2026-03-04-doob-sync-plugin-system-design.md
hooks/: claude_hooks.py  hook_logging.py  hooks_config.yaml  my-first-hook.py
paste-cache/: 051538254b1ce471.txt  0a7571612a3aa007.txt  153826c92aea0fb4.txt  209c959f692876f4.txt  27bc00354c6db18d.txt  2c6d67600756d8f8.txt  52a4db588319f3b2.txt  59aa5b064c2fa843.txt  5d64ffe1cb41b6c6.txt  61f4ffc88d6e7ecd.txt  651a3f13daa11c33.txt  6899e6648e8dbaa4.txt  8659de32fc4501af.txt  8e3a819544764ded.txt  9876a4a2131efa78.txt  9b54794a99df9084.txt  a11896494388bd6f.txt  b436fad380c59b64.txt  b4590928b8c526e7.txt  b9c4656cc803e089.txt  be15173e06cf24e2.txt  ec357f0de602dd56.txt  ecc73ec65b919545.txt  f71959b116b30a00.txt
rules/: baml.md  (+10 more)
(+903 files in other folders)
