[project]
name = "claude-workspace"
version = "0.1.0"
description = "Claude Code workspace configuration"
requires-python = ">=3.9"

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = [
    "plugins",
    "projects",
    "file-history",
    "shell-snapshots"
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["skills", "agents", "commands"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
