[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pjlib"
version = "0.1.0"
description = "Parse Claude Code ~/.claude/projects logs and build datasets"
requires-python = ">=3.12"

[project.scripts]
pj-dataset = "pjlib.dataset:cli"
pj-index = "pjlib.index:cli"
pj-log-parser = "pjlib.log_parser:cli"
pj-schema-samples = "pjlib.schema_samples:cli"
pj-to-art = "pjlib.to_art:cli"

[tool.setuptools]
packages = ["pjlib"]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["plugins", "projects", "file-history", "shell-snapshots"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long (handled by formatter)
  "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["pjlib", "scripts", "skills", "agents", "commands"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
